@@ -6,7 +6,8 @@ CHANGELOG
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
 2025/12/19:
-- TestEngine: ctx->WindowResize() can keep existing size for a given axis.
+- TestEngine: ctx->WindowResize(): passing 0.0f keep existing size of for
+  a given axis, vs passing < 0.0f auto-resize for this axis.
 
 2025/12/11:
 - TestEngine: fixes for changes in 1.92.6.
